# animaterm

./: 0.txf  1.txf  2.txf  3.txf  4.txf  7.txf  8.txf  9.txf  Cargo.toml  LICENSE  README.md  glyph_index.txt  glyphs.txt  index.txg  smileys.txt
examples/: 0.txf  1.txf  2.txf  3.txf  4.txf  5.txf  6.txf  7.txf  8.txf  9.txf  example_1.rs  example_2.rs  example_3.rs  example_4.rs  example_5.rs  example_6.rs  index.txg
src/: animation.rs  color.rs  display.rs  error.rs  frame.rs  glyph.rs  glyphcake.rs  graphic.rs  helpers.rs  key.rs  lib.rs  libold.rs  macros.rs  manager.rs  pixel.rs  response.rs  screen.rs  tests.rs  time.rs  utilities.rs
