[package]
name = "animaterm"
version = "0.2.8"
edition = "2021"
authors = ["Jakub Mitoraj <dxtr85@gmail.com>"]
description = "An easy to use terminal user interface library with keyboard macros support."
license = "MIT"
repository = "https://github.com/dxtr85/animaterm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termios = "0.3.3"
